[package]
name = "diane"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-hal = { version = "0.23.1", features = ["esp32c3", "debug"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.6.0" }
embedded-io = "0.6.1"

embedded-io-async = "0.6.1"
embassy-net = { version = "0.6.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }

esp-wifi = { version = "0.12.0", features = [
    "esp32c3",
    "utils",
    "wifi",
    "log",
    "esp-alloc",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-40960"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c3"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
critical-section = "1.2.0"
embedded-sdmmc = "0.8.1"
embedded-hal-bus = "0.2.0"
uuid = { version = "1.12.0", default-features = false }
substring = "1.4.5"
aligned = "0.4.2"
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.2"
mbr-nostd = "0.1.0"
esp-embassy-wifihelper = { version = "0.2.2", default-features = false, features = [
    "esp32c3",
] }
utc-dt = { version = "0.3.1", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
